Fix display bug in Firefox
It doesn’t look like there’s an easy way to support Edge currently, but it should gain support in the future by stretch. Currently it should degrade gracefully.

--- a/assets/styles/sidebar.css
+++ b/assets/styles/sidebar.css
@@ -33,7 +33,9 @@ a column
   
   [fixed] {
     position: fixed;
-    width: fill-available;
+    width: -webkit-fill-available;
+    width: -moz-available;
+    width: stretch;
   }
   [fixed] > :nth-last-child(3n) {
     visibility: visible;
